--- a/plugin.xml
+++ b/plugin.xml
@@ -62,8 +62,8 @@
 		<source-file src="src/android/src/com/pushwoosh/plugin/internal/PhonegapPluginProvider.java"
 			target-dir="src/com/pushwoosh/plugin/internal" />
 
-		<framework src="com.google.firebase:firebase-core:+" />
-		<framework src="com.google.firebase:firebase-messaging:+" />
+		<framework src="com.google.firebase:firebase-core:16.0.9" />
+		<framework src="com.google.firebase:firebase-messaging:18.0.0" />
 
 		<framework src="com.android.support:support-v4:28.0.0" />
         <framework src="com.android.support:appcompat-v7:28.0.0" />
